# tiny-files

./: .gitignore  LICENSE  Makefile  README  README.md  shell.nix  tiny-files.cabal
src/: Lib.hs  Main.elm
static/: Main.elm  index.html  main.js
static/elm-stuff/build-artifacts/0.18.0/user/project/1.0.0/: Main.elmi  Main.elmo
