name:                tiny-files
version:             1.0.0.0
synopsis:            Upload and Download one file
description:         Please see README
homepage:            https://github.com/noelr/tiny-files#readme
license:             BSD3
license-file:        LICENSE
author:              Noel Rohrbach
maintainer:          noel@noelr.ch
copyright:           2016 Noel Rohrbach
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , bytestring
                     , filepath
                     , wai-extra
  default-language:    Haskell2010

executable tiny-files-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiny-files
  default-language:    Haskell2010

test-suite tiny-files-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny-files
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noelr/tiny-files
